--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -6,8 +6,11 @@ on:
       docker_images:
         description: '请填写docker镜像名称 多个用英文逗号分开'
         required: true
-        default: 'alpine:latest,ubuntu:latest'  # 设置默认的 Docker 镜像列表
-
+        default: 'alpine:latest'  # 设置默认的 Docker 镜像列表
+      file_name:
+        description: '请填写保存的文件名'
+        required: true
+        default: 'images.tar.gz'  # 设置默认的 Docker 镜像列表
 jobs:
   pull_and_package:
     runs-on: ubuntu-latest
@@ -26,13 +29,13 @@ jobs:
         done
 
     - name: Compress the TAR files
-      run: tar -czf x86-64-images.tar.gz *-amd64.tar
+      run: tar -czf "${{ github.event.inputs.file_name }}" *-amd64.tar
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
-        name: docker-images-tar
-        path: x86-64-images.tar.gz
+        name: "${{ github.event.inputs.file_name }}"
+        path: "${{ github.event.inputs.file_name }}"
         retention-days: 1  # 将保留天数设置为 1 天 最多可设置90天
 
     - name: Clean up intermediate files
