--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -26,10 +26,11 @@ jobs:
         for image in "${image_array[@]}"; do
           docker pull "${image}" --platform "linux/amd64"
           docker save "${image}" -o "${image//\//_}-amd64.tar"
+          docker inspect --format='{{.RepoDigests}}' "${image}" > "${image}.digest"
         done
 
     - name: Compress the TAR files
-      run: tar -czf "${{ github.event.inputs.file_name }}" *-amd64.tar
+      run: tar -czf "${{ github.event.inputs.file_name }}" *-amd64.tar *.digest
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
@@ -41,3 +42,4 @@ jobs:
     - name: Clean up intermediate files
       run: |
         rm *-amd64.tar
+        rm *.digest
