--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -26,7 +26,7 @@ jobs:
         for image in "${image_array[@]}"; do
           docker pull "${image}" --platform "linux/amd64"
           docker save "${image}" -o "${image//\//_}-amd64.tar"
-          docker inspect --format='{{.RepoDigests}}' "${image}" > "${image}.digest"
+          docker inspect --format='{{.RepoDigests}}' "${image}" > "${image//\/:/_}.digest"
         done
 
     - name: Compress the TAR files
