--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -25,7 +25,7 @@ jobs:
         IFS=',' read -r -a image_array <<< "$images"
         for image in "${image_array[@]}"; do
           docker pull "${image}" --platform "linux/amd64"
-          docker save "${image}" -o "${image//\//_}-amd64.tar"
+          docker save "${image}" -o "${image//\/:/_}-amd64.tar"
           docker inspect --format='{{.RepoDigests}}' "${image}" > "${image//\/:/_}.digest"
         done
 
