--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -25,9 +25,11 @@ jobs:
         IFS=',' read -r -a image_array <<< "$images"
         for image in "${image_array[@]}"; do
           docker pull "${image}" --platform "linux/amd64"
-          echo "save image to ${image//\/\:/_}-amd64.tar"
-          docker save "${image}" -o "${image//\/\:/_}-amd64.tar"
-          docker inspect --format='{{.RepoDigests}}' "${image}" > "${image//\/\:/_}.digest"
+          image_name="${image//:/_}"
+          image_name="${image//\//_}"
+          echo "save image to ${image_name}-amd64.tar"
+          docker save "${image}" -o "${image_name}-amd64.tar"
+          docker inspect --format='{{.RepoDigests}}' "${image}" > "${image_name}.digest"
         done
 
     - name: Compress the TAR files
