--- a/.github/workflows/get_tags.yml
+++ b/.github/workflows/get_tags.yml
@@ -12,6 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: show url
-      run: echo "https://registry.hub.docker.com/v2/repositories/$docker_image/tags?page=2&page_size=100"
-    - name: get image tags
-      run: curl -L -s "https://registry.hub.docker.com/v2/repositories/$docker_image/tags?page=2&page_size=100"       
+      run: |
+      image="${{ github.event.inputs.docker_image }}"
+      echo "https://registry.hub.docker.com/v2/repositories/$image/tags?page=2&page_size=100"
+    - name: get image tags   
+      run: |
+      image="${{ github.event.inputs.docker_image }}"
+      curl -L -s "https://registry.hub.docker.com/v2/repositories/$image/tags?page=2&page_size=100"       
